ajouter la partie frontend de la page des evenements

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -3,7 +3,6 @@
     text-decoration: none !important;
 }
 
-
 /* avatar header */
 .avatar-dropdown {
     display: flex;
@@ -29,5 +28,10 @@
 }
 
 .suggestions :is(span) {
+    cursor: pointer;
+}
+
+/* main section */
+.card {
     cursor: pointer;
 }
